--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -498,6 +498,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_treasure_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
