--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -121,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:nestedScrollingEnabled="false" />
+                        android:overScrollMode="never" />
                 </RelativeLayout>
 
             </RelativeLayout>
