--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -60,8 +60,8 @@
                             android:layout_width="50dp"
                             android:layout_height="13dp"
                             android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
                             android:layout_marginTop="3dp"
+                            android:layout_marginRight="6dp"
                             android:textSize="11sp" />
 
 
@@ -70,10 +70,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:layout_marginBottom="2dp"
                             android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
                             android:layout_marginTop="6.5dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_marginBottom="2dp"
                             android:singleLine="true"
                             android:textColor="@color/white"
                             android:textSize="10sp" />
@@ -140,8 +140,8 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/shape_live_display_contribution_btn_bg"
                     android:drawableLeft="@drawable/live_display_cup"
-                    android:drawablePadding="6dp"
                     android:drawableRight="@drawable/live_display_arrow"
+                    android:drawablePadding="6dp"
                     android:gravity="center"
                     android:paddingLeft="9dp"
                     android:paddingRight="9dp"
@@ -193,8 +193,8 @@
                         android:id="@+id/tv_run_way_gift"
                         android:layout_width="1000dp"
                         android:layout_height="20dp"
-                        android:layout_marginBottom="2dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_marginBottom="2dp"
                         android:gravity="center_vertical"
                         android:singleLine="true"
                         android:textSize="12sp" />
@@ -302,10 +302,10 @@
                         android:layout_alignParentBottom="true"
                         android:background="#702d2933"
                         android:gravity="center_vertical"
-                        android:paddingBottom="3dp"
                         android:paddingLeft="7dp"
-                        android:paddingRight="7dp"
                         android:paddingTop="2dp"
+                        android:paddingRight="7dp"
+                        android:paddingBottom="3dp"
                         android:singleLine="true"
                         android:textSize="12sp"
                         android:visibility="gone" />
@@ -326,8 +326,8 @@
                     android:layout_width="255dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="20dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginBottom="20dp"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:visibility="visible">
@@ -342,9 +342,9 @@
                         android:id="@+id/cl_entenr"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="4dp"
                         android:paddingLeft="10dp"
-                        android:paddingTop="3dp">
+                        android:paddingTop="3dp"
+                        android:paddingBottom="4dp">
 
                         <com.whzl.mengbi.ui.widget.view.RoyalEnterView
                             android:id="@+id/tv_enter"
@@ -392,15 +392,15 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="7dp"
-                    android:layout_marginTop="9dp" />
+                    android:layout_marginTop="9dp"
+                    android:layout_marginRight="7dp" />
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/vp_activity"
                     android:layout_width="61dp"
                     android:layout_height="108dp"
-                    android:layout_alignParentRight="true"
                     android:layout_below="@id/banner"
+                    android:layout_alignParentRight="true"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/bg_liveweb"
                     android:visibility="gone" />
@@ -438,10 +438,10 @@
                 android:id="@+id/view_message_notify"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
-                android:layout_alignRight="@id/btn_chat_private"
                 android:layout_alignTop="@id/btn_chat_private"
-                android:layout_marginRight="2dp"
+                android:layout_alignRight="@id/btn_chat_private"
                 android:layout_marginTop="2dp"
+                android:layout_marginRight="2dp"
                 android:background="@drawable/shape_red_notify"
                 android:visibility="gone" />
 
@@ -510,10 +510,10 @@
         android:id="@+id/rl_treasure_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="50dp"
-        android:layout_marginRight="12dp">
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="50dp">
 
         <ImageButton
             android:id="@+id/btn_treasure_box"
@@ -528,8 +528,8 @@
             android:layout_width="11dp"
             android:layout_height="11dp"
             android:layout_alignRight="@id/btn_treasure_box"
-            android:layout_marginRight="4dp"
             android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
             android:background="@drawable/shape_red_notify"
             android:gravity="center"
             android:text="1"
