--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -178,4 +178,6 @@
     <color name="text_color_sendgif">#FFFE3F7E</color>
     <color name="bg_dialog_gift_live">#2a2e36</color>
 
+    <color name="text_color_chat_list">#ffffff</color>
+
 </resources>
