--- a/app/src/main/res/layout/comm_recycler.xml
+++ b/app/src/main/res/layout/comm_recycler.xml
@@ -1,35 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent">-->
+<?xml version="1.0" encoding="utf-8"?><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="4dp">
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recycler"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:overScrollMode="never"
+    android:paddingTop="4dp">
 
-    </android.support.v7.widget.RecyclerView>
+</android.support.v7.widget.RecyclerView>
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/ll_enter"-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:padding="5dp"-->
-        <!--android:background="@drawable/bg_chat_normal"-->
-        <!--android:visibility="gone">-->
+    <!--<LinearLayout--><!--android:id="@+id/ll_enter"--><!--android:layout_width="200dp"--><!--android:layout_height="wrap_content"--><!--android:layout_marginTop="20dp"--><!--android:orientation="horizontal"--><!--android:padding="5dp"--><!--android:background="@drawable/bg_chat_normal"--><!--android:visibility="gone">-->
 
-        <!--<com.whzl.mengbi.ui.widget.view.RollTextView-->
-            <!--android:id="@+id/tv_enter"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:marqueeRepeatLimit="1"-->
-            <!--android:ellipsize="marquee"-->
-            <!--android:singleLine="true"-->
-            <!--android:textSize="14sp"-->
-            <!--android:textColor="#ffffff"-->
-            <!--android:padding="5dp"/>-->
-    <!--</LinearLayout>-->
-<!--</RelativeLayout>-->
+    <!--<com.whzl.mengbi.ui.widget.view.RollTextView--><!--android:id="@+id/tv_enter"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:marqueeRepeatLimit="1"--><!--android:ellipsize="marquee"--><!--android:singleLine="true"--><!--android:textSize="14sp"--><!--android:textColor="#ffffff"--><!--android:padding="5dp"/>--><!--</LinearLayout>--><!--</RelativeLayout>-->
