--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -178,6 +178,10 @@
     <color name="text_color_sendgif">#FFFE3F7E</color>
     <color name="bg_dialog_gift_live">#2a2e36</color>
 
+    <color name="text_color_kickout_bei">#f9f9f9</color>
+    <color name="text_color_kickout_people">#f9f9f9</color>
+    <color name="text_color_kickout_text">#ff709f</color>
+
     <color name="text_color_chat_list">#ffffff</color>
 
 </resources>
