--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -119,8 +119,11 @@
                         android:id="@+id/audience_recycler"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:layout_marginEnd="-1dp"
+                        android:layout_marginRight="-1dp"
                         android:overScrollMode="never" />
                 </RelativeLayout>
 
