--- a/app/src/main/res/layout/item_pk_opposite.xml
+++ b/app/src/main/res/layout/item_pk_opposite.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    tools:layout_editor_absoluteY="25dp">
+    android:layout_marginLeft="1dp"
+    android:layout_marginRight="1dp">
 
     <com.whzl.mengbi.ui.widget.view.CircleRelativeLayout
         android:id="@+id/circle_head"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/shape_online_head_civilian">
 
         <com.whzl.mengbi.ui.widget.view.CircleImageView
@@ -30,12 +28,12 @@
 
     <TextView
         android:id="@+id/tv_pk_count"
-        android:layout_width="wrap_content"
+        android:layout_width="24.5dp"
         android:layout_height="wrap_content"
-        android:text="10000"
-        android:textSize="8sp"
-        android:textColor="@color/white"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/circle_head" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@id/circle_head"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:singleLine="true"
+        android:textColor="#fffffe"
+        android:textSize="8sp" />
+</RelativeLayout>
