--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -244,6 +244,7 @@
                             android:layout_height="match_parent" />
 
                         <RelativeLayout
+                            android:id="@+id/rl_other_side_info"
                             android:layout_width="wrap_content"
                             android:layout_height="20dp"
                             android:layout_marginLeft="6dp"
