--- a/app/src/main/res/layout/layout_pk_new.xml
+++ b/app/src/main/res/layout/layout_pk_new.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/rl_pk_progress"
@@ -53,14 +54,26 @@
                     android:layout_marginRight="2dp"
                     android:background="@drawable/shape_pk_progress">
 
-                    <ProgressBar
+                    <!--<ProgressBar-->
+                        <!--android:id="@+id/pb_pk"-->
+                        <!--style="@style/StyleProgressBarMini"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="18dp"-->
+                        <!--android:background="@drawable/shape_pk_progress"-->
+                        <!--android:max="100"-->
+                        <!--android:progress="50" />-->
+                    <com.whzl.mengbi.ui.widget.view.PkProgressView
                         android:id="@+id/pb_pk"
-                        style="@style/StyleProgressBarMini"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
-                        android:background="@drawable/shape_pk_progress"
                         android:max="100"
-                        android:progress="50" />
+                        app:alignLeft="20dip"
+                        app:backColor="#FF4676"
+                        app:backColorDefault="#2DA8EE"
+                        app:defaultPercent="50"
+                        app:text=""
+                        app:textColor="@android:color/white"
+                        app:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/tv_my_follow"
