--- a/app/src/main/res/layout/layout_pk_new.xml
+++ b/app/src/main/res/layout/layout_pk_new.xml
@@ -42,6 +42,7 @@
             </RelativeLayout>
 
             <LinearLayout
+                android:id="@+id/ll_pk_progress"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
