--- a/app/src/main/res/drawable/bg_liveweb.xml
+++ b/app/src/main/res/drawable/bg_liveweb.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
 
     <corners android:radius="5dp" />
-    <solid android:color="#10ffffff" />
+    <solid android:color="#343a42" />
 </shape>
