--- a/app/src/main/res/layout/pop_pk_end.xml
+++ b/app/src/main/res/layout/pop_pk_end.xml
@@ -105,6 +105,7 @@
             </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/ll_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
