--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/tv_mengbi"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="12dp"
+                android:layout_marginLeft="14dp"
                 android:gravity="center"
                 android:text="萌币:"
                 android:textColor="#fefefe"
@@ -80,11 +80,11 @@
                 android:layout_marginLeft="7.5dp"
                 android:layout_toRightOf="@id/tv_amount"
                 android:background="@drawable/btn_dialog_gift_recharge"
-                android:gravity="center_vertical"
-                android:paddingBottom="4dp"
+                android:gravity="center"
+                android:paddingBottom="3dp"
                 android:paddingLeft="6dp"
                 android:paddingRight="6dp"
-                android:paddingTop="4dp"
+                android:paddingTop="2dp"
                 android:text="充值>"
                 android:textColor="#fefefe"
                 android:textSize="9sp" />
@@ -94,7 +94,7 @@
                 android:layout_height="25dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="25dp"
+                android:layout_marginRight="14dp"
                 android:orientation="horizontal">
 
                 <TextView
