--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -168,7 +168,7 @@
     <color name="bg_welcome_hasguard">#903a4f69</color>
     <color name="bg_welcome_noguard">#242b35</color>
     <color name="text_color_nochat_bei">#f9f9f9</color>
-    <color name="text_color_nochat_people">#FFFF709F</color>
+    <color name="text_color_nochat_people">#f9f9f9</color>
     <color name="text_color_nochat">#ff709f</color>
     <color name="text_color_focus_nick">#fdfcfa</color>
     <color name="text_color_focus">#ffeca8</color>
