--- a/app/src/main/res/layout/item_auto_poll.xml
+++ b/app/src/main/res/layout/item_auto_poll.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.whzl.mengbi.ui.widget.view.CircleRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/circle_head"
     android:layout_width="31dp"
     android:layout_height="31dp"
@@ -8,8 +8,8 @@
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
         android:id="@+id/iv_circle_head"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="1dp"/>
 
     <ImageView
@@ -18,4 +18,4 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
 
-</com.whzl.mengbi.ui.widget.view.CircleRelativeLayout>
+</RelativeLayout>
