--- a/app/src/main/res/layout/dialog_upgrade.xml
+++ b/app/src/main/res/layout/dialog_upgrade.xml
@@ -1,95 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="304dp"
-        android:layout_height="375dp"
-        android:background="@drawable/shape_dialog_update_bg">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/update_dialog_bg" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="122dp"
-            android:src="@drawable/update_slogon" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="350dp"
+        android:layout_height="450dp"
+        android:layout_centerInParent="true"
+        android:background="@null">
 
         <RelativeLayout
-            android:id="@+id/rl_version_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="205dp">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="13dp"
-                android:layout_marginRight="13dp"
-                android:background="#e5e5e5" />
+            android:id="@+id/rl_upgrade"
+            android:layout_width="304dp"
+            android:layout_height="336dp"
+            android:background="@drawable/shape_dialog_update_bg"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/tv_version_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="13dp"
-                android:paddingRight="13dp"
-                android:textColor="#646464"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/text_view"
+                android:layout_marginTop="42dp"
                 android:textSize="17sp"
-                android:textStyle="bold"
-                android:background="#f5f9fa"
-                android:layout_centerHorizontal="true"/>
-        </RelativeLayout>
-
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_below="@id/rl_version_container"
-            android:layout_marginTop="10dp"
-            android:overScrollMode="never">
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tv_update_info"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:lineSpacingExtra="5dp"
-                android:paddingLeft="50dp"
+                android:id="@+id/tv_update_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_version_name"
+                android:text="更新内容 ："
+                android:textColor="@color/text_view"
                 android:paddingRight="50dp"
-                android:textColor="#323232"
-                android:textSize="15sp" />
-        </android.support.v4.widget.NestedScrollView>
+                android:paddingLeft="50dp"
+                android:layout_marginTop="36dp"
+                android:textStyle="bold"/>
+
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_below="@id/tv_update_title"
+                android:layout_marginTop="10dp"
+                android:overScrollMode="never">
+
+                <TextView
+                    android:id="@+id/tv_update_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:lineSpacingExtra="5dp"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="50dp"
+                    android:textColor="#323232"
+                    android:textSize="15sp" />
+            </android.support.v4.widget.NestedScrollView>
+
+            <Button
+                android:id="@+id/btn_upgrade"
+                android:layout_width="201dp"
+                android:layout_height="36dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="31dp"
+                android:background="@drawable/shape_upgrade_btn_bg_yellow"
+                android:text="@string/upgrade"
+                android:textColor="@color/colorblack"
+                android:textSize="18sp" />
+        </RelativeLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="162dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/bg_upgrade"
+            app:layout_constraintBottom_toBottomOf="@+id/rl_upgrade"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/rl_upgrade"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.035"
+            tools:ignore="MissingConstraints" />
 
         <ImageButton
             android:id="@+id/btn_dismiss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:background="@null"
-            android:padding="10dp"
-            android:src="@drawable/close_blue_icon" />
+            android:src="@drawable/ic_close_dialog"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rl_upgrade"
+            app:layout_constraintVertical_bias="1.0" />
 
-        <Button
-            android:id="@+id/btn_upgrade"
-            android:layout_width="250dp"
-            android:layout_height="44dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="13.5dp"
-            android:background="@drawable/shape_upgrade_btn_bg"
-            android:text="@string/upgrade"
-            android:textColor="@color/comm_white"
-            android:textSize="17sp"/>
+    </android.support.constraint.ConstraintLayout>
 
-    </RelativeLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
