--- a/app/src/main/res/layout/head_follow.xml
+++ b/app/src/main/res/layout/head_follow.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -8,31 +7,45 @@
     android:orientation="vertical">
 
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/bannerLayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusableInTouchMode="true">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="5dp"
-            app:layout_constraintDimensionRatio="H,3:1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintLeft_toRightOf="parent" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_empty_follow" />
 
-    </android.support.constraint.ConstraintLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="您还没有关注的主播"
+            android:textColor="#40000000"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="小编给您推荐了几位美丽可爱的主播"
+            android:textColor="#40000000"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:drawableLeft="@drawable/home_title_recommended"
+        android:layout_marginTop="30dp"
+        android:drawableLeft="@drawable/ic_like_empty_follow"
         android:drawablePadding="4dp"
         android:gravity="center_vertical"
         android:paddingLeft="5dp"
-        android:text="小编推荐"
+        android:text="猜你喜欢"
         android:textColor="#323232"
         android:textSize="16sp"
         android:textStyle="bold" />
